pgadmin/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgadmin
  namespace: zi-staging
spec:
  serviceName: pgadmin-service
  podManagementPolicy: Parallel
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 5050
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:9.14
        imagePullPolicy: Always
        resources:
          requests:
            memory: "500Mi"
            cpu: "1"
          limits:
            cpu: '2'
            memory: 4Gi
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsUser: 5050
          runAsNonRoot: true
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /misc/ping
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /misc/ping
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: pgadmin-disk-data
          mountPath: /var/lib/pgadmin
      volumes:
      - name: pgadmin-disk-data
        persistentVolumeClaim:
          claimName: pgadmin-pvc
