pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: zi-prod
  labels:
    app: pgadmin
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
